# service-mesh

./: .gitignore  .readthedocs.yaml  .release-please-manifest.json  .wokeignore  README.md  leon-review-bot.md  pyproject.toml  release-please-config.json  tox.ini
canonical_service_mesh/: CHANGELOG.md  README.md  pyproject.toml  tox.ini
canonical_service_mesh/src/canonical_service_mesh/: __init__.py  _version.py  enums.py
canonical_service_mesh/src/canonical_service_mesh/interfaces/: __init__.py
canonical_service_mesh/src/canonical_service_mesh/interfaces/envoy_extension_server/: __init__.py  _envoy_extension_server.py
canonical_service_mesh/src/canonical_service_mesh/interfaces/istio_ingress_config/: __init__.py  _istio_ingress_config.py
canonical_service_mesh/src/canonical_service_mesh/interfaces/tailscale_credentials/: __init__.py  _tailscale_credentials.py
canonical_service_mesh/src/canonical_service_mesh/k8s/resource_manager/: __init__.py  _batch_operations.py  _crd_manager.py  _mocking.py  _resource_manager.py
canonical_service_mesh/src/canonical_service_mesh/k8s/types/: __init__.py
canonical_service_mesh/src/canonical_service_mesh/models/: __init__.py  _gateway.py  _metadata.py
canonical_service_mesh/src/canonical_service_mesh/models/envoy/: __init__.py  _backend.py  _envoy_proxy.py  _security_policy.py  _telemetry.py
canonical_service_mesh/src/canonical_service_mesh/models/istio/: __init__.py  _auth.py  _policy.py
canonical_service_mesh/src/canonical_service_mesh/utils/: __init__.py  _juju.py  _labels.py
canonical_service_mesh/src/canonical_service_mesh/utils/istio/: __init__.py  _labels.py  _policy_builder.py
canonical_service_mesh/tests/unit/: test_auth_models.py  test_batch_operations.py  test_crd_manager.py  test_envoy_models.py  test_gateway_models.py  test_istio_labels.py  test_juju_identity.py  test_labels.py  test_policy_builder.py  test_policy_models.py  test_policy_resource_manager.py  test_resource_manager.py
canonical_service_mesh/tests/unit/interfaces/: test_envoy_extension_server.py  test_istio_ingress_config.py  test_tailscale_credentials.py
charms/envoy-controller-k8s/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/envoy-controller-k8s/crds/gie/: inference-extension.yaml
charms/envoy-controller-k8s/src/: charm.py
charms/envoy-controller-k8s/src/grafana_dashboards/: envoy-gateway-controller.json  envoy-gateway-data-plane.json
charms/envoy-controller-k8s/src/prometheus_alert_rules/: envoy-gateway.rules
charms/envoy-controller-k8s/tests/integration/: conftest.py  helpers.py
charms/envoy-controller-k8s/tests/integration/features/: controllers.feature  crds.feature  deploy.feature  extension_server.feature  grafana_dashboard.feature  metrics_endpoint.feature  otlp.feature  scaling.feature  webhook.feature
charms/envoy-controller-k8s/tests/integration/steps/: common_steps.py  controllers_steps.py  crds_steps.py  grafana_steps.py  metrics_endpoint_steps.py  otlp_steps.py  scaling_steps.py
charms/envoy-controller-k8s/tests/integration/tests/: test_controllers.py  test_crds.py  test_deploy.py  test_grafana_dashboard.py  test_metrics_endpoint.py  test_otlp.py  test_scaling.py
charms/envoy-controller-k8s/tests/unit/: conftest.py  test_certgen.py  test_charm.py  test_config.py  test_crds.py  test_service.py  test_tls.py
charms/istio-beacon-k8s/: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/istio-beacon-k8s/src/: charm.py
charms/istio-beacon-k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/istio-beacon-k8s/terraform/tests/examples/: istio-beacon.tf
charms/istio-beacon-k8s/tests/integration/: conftest.py  helpers.py  test_charm.py  test_charm_scaling.py  test_cross_model.py  test_policy_resource_manager.py
charms/istio-beacon-k8s/tests/unit/: conftest.py  test_authorization_policies.py  test_charm.py  test_charm_scenario.py  test_charm_tracing.py  test_mesh_consumer.py  test_mesh_policy.py  test_mesh_provider.py  test_policy_manager_helpers.py  test_policy_resource_manager.py
charms/istio-ingress-k8s/: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/istio-ingress-k8s/src/: charm.py  utils.py
charms/istio-ingress-k8s/src/prometheus_alert_rules/: istio-ingress.rules
charms/istio-ingress-k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/istio-ingress-k8s/terraform/tests/examples/: istio-ingress.tf
charms/istio-ingress-k8s/tests/integration/: conftest.py  helpers.py  test_charm_auth.py  test_charm_ipa.py  test_charm_istio_ingress_route.py  test_charm_request_auth.py  test_charm_scaling.py  test_gateway_metadata.py  test_upstream_ingress.py
charms/istio-ingress-k8s/tests/manual/auth/: README.md  conftest.py  test_setup_auth.py
charms/istio-ingress-k8s/tests/unit/: conftest.py  test_auth.py  test_charm.py  test_charm_tracing.py  test_gateway.py  test_ingress.py  test_ingress_config.py  test_request_auth.py  test_upstream_ingress.py  test_utils_deduplication.py  test_utils_normalization.py
charms/kiali-k8s/: .gitignore  .wokeignore  CONTRIBUTING.md  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/kiali-k8s/src/: charm.py  charm_config.py  workload_config.py
charms/kiali-k8s/src/prometheus_alert_rules/: kiali.rules
charms/kiali-k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/kiali-k8s/terraform/tests/example/: kiali.tf
charms/kiali-k8s/tests/integration/: conftest.py  helpers.py  tempo_helpers.py  test_charm.py  test_tempo_integration.py
charms/kiali-k8s/tests/unit/: conftest.py  test_charm.py  test_helpers.py
charms/tailscale-beacon-k8s/: README.md  charmcraft.yaml  pyproject.toml
charms/tailscale-beacon-k8s/src/: charm.py
charms/tailscale-beacon-k8s/tests/integration/features/: deploy.feature  ingress.feature  no_operator.feature  status.feature
charms/tailscale-beacon-k8s/tests/unit/: conftest.py  test_charm.py
charms/tailscale-config/tests/integration/dummy-requirer/: charmcraft.yaml  (+1 more)
(+299 files in other folders)
