# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canonical-service-mesh"
dynamic = ["version"]
description = "Shared utilities for Charmed Service Mesh."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "lightkube>=0.11.0",
    "ops>=2.23",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "ops[testing]",
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
]

[project.urls]
"Repository" = "https://github.com/canonical/service-mesh"
"Issues" = "https://github.com/canonical/service-mesh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/canonical_service_mesh"]

[tool.hatch.version]
path = "src/canonical_service_mesh/_version.py"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
