# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "istio-beacon-k8s"
version = "0.0"
requires-python = ">=3.10"

dependencies = [
    "canonical-service-mesh>=0.0.2",
    "charmlibs-interfaces-service-mesh",
    "ops~=2.5",
    "pydantic>=2",
    "cosl",
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
]

[project.optional-dependencies]
dev = [
    # Linting
    "ruff",
    "codespell",
    # Static
    "pyright",
    # Unit
    "pytest",
    "coverage[toml]",
    "pytest-mock",
    "ops-scenario~=7.0",
    # Integration
    "juju",
    "jubilant",
    "pytest-jubilant",
    "httpx",
    "tenacity",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)-9s %(module)s:%(filename)s:%(lineno)d %(message)s"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = [
    "abort_on_fail: Abort test suite if this test fails",
]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "N805",
]
ignore = ["E501", "D107"]
# ignore N815 in src/models.py because the class variables are defined to match the real kubernetes names.  Otherwise,
# names like "notHosts" would fail the linting check.
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"], "src/models.py" = ["N815"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
ignore-words-list = "assertIn"

[tool.pyright]
extraPaths = ["src", "lib"]
include = ["src/**.py"]
