# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "istio-ingress-k8s"
version = "0.0"
requires-python = "~=3.10"
dependencies = [
    "ops~=2.5",
    "pydantic>=2",
    "cosl",
    "charmlibs-interfaces-gateway-metadata",
    "charmlibs-interfaces-istio-ingress-route",
    "charmlibs-interfaces-istio-request-auth",
    "charmlibs-interfaces-service-mesh",
    "canonical-service-mesh>=0.0.2",
    "cryptography~=42.0.0", # Deps: tls_certificates_interface libs
    "opentelemetry-exporter-otlp-proto-http==1.21.0", # PYDEPS: lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py
    "jsonschema>=4.22.0", # Deps: traefik_k8s libs, tls_certificates_interface libs
]

[project.optional-dependencies]
dev = [
    # Linting
    "ruff",
    # Static
    "pyright",
    # Unit
    "pytest",
    "coverage[toml]",
    "pytest-mock",
    "ops-scenario",
    # Integration
    "pytest-asyncio",
    "jubilant",
    "pytest-jubilant",
    "pytest-dependency",
    #"juju",
    "requests",
    "grpcio",
    "grpcio-reflection",
    "grpcio-tools",
    "lightkube",
    "protobuf",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info", "tests/integration/testers/*/lib"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
# ignore N815 in src/models.py because the class variables are defined to match the real kubernetes names.  Otherwise,
# names like "notHosts" would fail the linting check.
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104","D401"], "src/models.py" = ["N815"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
ignore-words-list = "assertIn"

[tool.pyright]
extraPaths = ["src", "lib"]
include = ["src/**.py"]
