# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

# Dependencies
[project]
name = "kiali-k8s"
version = "0.0"
requires-python = ">=3.12"

dependencies = [
    "cosl",
    "ops",
    "pydantic",
    "requests",
    "observability-charm-tools@git+https://github.com/canonical/observability-charm-tools@main",
]

[project.optional-dependencies]
dev = [
    # Liniting
    "ruff",
    "black",
    "codespell",
    # Static
    "pyright",
    # Unit
    "pytest",
    "pytest-mock",
    "coverage[toml]",
    "ops-scenario",
    # Integration
    "juju",
    "lightkube",
    "minio",
    "pytest-operator",
    "requests",
    "pytest-asyncio==0.21.2",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = [
    "dependency",
    "setup",
    "teardown",
]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py312"]

# Linting tools configuration
[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
exclude = ["__pycache__", "*.egg_info"]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
